--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Bag</li>
+		<li data-ns-test="shoppingList">Bat</li>
+		<li data-ns-test="shoppingList">PS5</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Pune</li>
+		<li data-ns-test="holidayList">Mumbai</li>
+		<li data-ns-test="holidayList">Chennai</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
